# kerf

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
crates/kerf-app/: Cargo.toml  tauri.conf.json
crates/kerf-app/capabilities/: default.json
crates/kerf-app/icons/: icon.icns
crates/kerf-app/licenses/: FFmpeg-NOTICE.md
crates/kerf-app/src/: lib.rs  main.rs  mcp.rs
crates/kerf-core/: Cargo.toml
crates/kerf-core/src/: analysis.rs  error.rs  fonts.rs  lib.rs  model.rs  project.rs
crates/kerf-core/src/engine/: audio.rs  cli.rs  ffmpeg.rs  mod.rs
crates/kerf-mcp/: Cargo.toml
crates/kerf-mcp/src/: main.rs
docs/img/: README.md
frontend/: README.md  package.json  vite.config.ts
frontend/src/: app.html
frontend/src/lib/: agent.svelte.ts  api.ts  audio.ts  context-menu.svelte.ts  editor-ui.svelte.ts  export-presets.ts  state.svelte.ts  types.ts
frontend/src/lib/components/: AgentPanel.svelte  MediaBin.svelte  PreviewPlayer.svelte  TimelineCanvas.svelte  clip-node.svelte
frontend/src/lib/components/editor/: AgentPanel.svelte  Badge.svelte  Btn.svelte  ContextMenu.svelte  ExportDialog.svelte  Icon.svelte  IconBtn.svelte  Inspector.svelte  KerfMark.svelte  MediaBin.svelte  Preview.svelte  StatusBar.svelte  Timeline.svelte  TitleBar.svelte  Toolbar.svelte  data.ts  icons.ts
frontend/src/lib/styles/: kerf-tokens.css
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte  layout.css
scripts/: fetch-ffmpeg.mjs
site/: hugo.toml
site/assets/css/: kerf.css
site/content/: _index.md
site/layouts/: index.html
site/layouts/_default/: baseof.html
site/layouts/partials/: edl-diagram.html  feature.html  flow-diagram.html  mark.html  mock-editor.html  mock-session.html
