[workspace]
resolver = "2"
members = ["crates/kerf-core", "crates/kerf-app"]

[workspace.package]
version = "0.5.0"
edition = "2021"
rust-version = "1.82"
license = "PolyForm-Noncommercial-1.0.0"
authors = ["Orell Bühler <me@orellbuehler.ch>"]
repository = "https://github.com/orellbuehler/kerf"
homepage = "https://github.com/orellbuehler/kerf"

[workspace.dependencies]
# Shared crates — ffmpeg is opt-in; consumers forward it via their own feature
kerf-core = { path = "crates/kerf-core", default-features = false }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# Errors
anyhow = "1.0.102"
thiserror = "2.0.18"

# Async
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "io-std", "sync"] }

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.5"

# Domain helpers
uuid = { version = "1.23", features = ["v4", "serde"] }
chrono = { version = "0.4.45", features = ["serde"] }

# Persistence — bundled SQLite (no system libsqlite needed)
rusqlite = { version = "0.40", features = ["bundled"] }

# Media — system FFmpeg (libav*) via pkg-config; compatible with FFmpeg >= 3.4
ffmpeg-next = "8.1"

# MCP — official Rust SDK (streamable-HTTP server transport, hosted by kerf-app)
rmcp = { version = "1.7", features = ["server", "macros", "transport-streamable-http-server"] }
schemars = "1.2"

# HTTP server for the embedded MCP endpoint (matches rmcp's tower/axum 0.8)
axum = "0.8"

# Desktop shell — Tauri v2
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
