[package]
name = "kerf-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Kerf domain model, .kerf project persistence, and FFmpeg media engine"

[features]
default = ["ffmpeg"]
# In-process libav access (probe / analysis / render) via ffmpeg-next.
# Requires the system FFmpeg dev libraries (see README). Disable to build the
# domain model + MCP read tools without FFmpeg installed.
ffmpeg = ["dep:ffmpeg-next"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
rusqlite.workspace = true
tracing.workspace = true
ffmpeg-next = { workspace = true, optional = true }
