[package]
name = "kerf-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Kerf domain model, .kerf project persistence, and FFmpeg media engine"

[features]
default = ["ffmpeg"]
# In-process libav probing via ffmpeg-next. Requires the system FFmpeg dev
# libraries (see README). Disable to build the domain model + MCP read tools
# with only the FFmpeg *binaries* (analysis / frames / waveforms / export all
# run by driving the `ffmpeg` / `ffprobe` CLI, which needs no dev libraries).
ffmpeg = ["dep:ffmpeg-next"]
# Experimental in-process libav export pipeline (otherwise export drives the
# `ffmpeg` binary). Implies `ffmpeg`; needs the FFmpeg dev libraries.
libav-render = ["ffmpeg"]
# Local speech-to-text transcription via whisper-rs. Needs a ggml model file
# (KERF_WHISPER_MODEL) at runtime and the whisper.cpp build toolchain.
whisper = ["dep:whisper-rs"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
rusqlite.workspace = true
tracing.workspace = true
dirs = "6"
fontdb.workspace = true
ffmpeg-next = { workspace = true, optional = true }
whisper-rs = { version = "0.16.0", optional = true }
